[project]
name = "medical_imaging_tools"
version = "0.1.0"
description = "General tools for medical imaging"
readme = "README.md"
authors = [
    { name = "Nazanin Donyapour", email = "nazanin.donyapour@axleinfo.com" }
]

requires-python = ">=3.9"
dependencies = [
    "intensity-normalization>=2.2.4",
    "matplotlib>=3.9.4",
    "nibabel>=3.2.2",
    "pydicom>=2.4.4",
    "totalsegmentator>=2.9.0",
    "vedo>=2025.5.4",
]


